--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ body {
 <body>
 
 <h2>CSS Template using Float</h2>
-<p>In this example, we have created a header, three equal columns and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect.</p>
+<p>Painel de controle para sensores e atuadores.</p>
+<p>Leitura de Temperatura, tensao e corrente.</p>
 
 <div class="header">
   <h2>Header</h2>
