--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;"><img src="/images/termometro.jpg" alt="Mountain" style="width:100px"> </div>
+  <div class="column" style="background-color:#aaa;"><img src="termometro.jpg" alt="Mountain" style="width:100px"> </div>
   <div class="column" style="background-color:#bbb;">Column</div>
   <div class="column" style="background-color:#ccc;">Column</div>
 </div>
