--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:rgb(255, 0, 10);"><img src="termometro.jpg" alt="termometro" style="width:100px">
+  <div class="column" style="background-color:rgb(255, 0, 10);">
+  <img src="termometro.jpg" alt="termometro">
   <input type="button" class="button" value="Ler Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
