--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ body {
 
 <div class="row">
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="/var/www/html/Thales/termometro.jpg" alt="termometro" width="200" height="300">
+  <img src="/Users/Thales/workspace/thales/Thales/termometro.jpg" alt="termometro" width="200" height="300">
   <input type="button" class="button" value="Ler Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
   <input type="button" class="button" value="Ler Corrente">
   </div>
   <div class="column" style="background-color:rgb(255, 165, 0);">
-  <input type="button" class="button" value="Ler Tensão">
+  <input type="button" class="button" value="Ler Tensao">
   </div>
 </div>
 
