--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@ body {
 <h2>CSS Template using Float</h2>
 <p>Painel de controle para sensores e atuadores.</p>
 <p>Leitura de Temperatura, tensao e corrente.</p>
-  <img src="termometro.jpg" alt="termometro" width="200" height="300">
-  <img src="/Users/Thales/workspace/thales/Thales/termometro.jpg" alt="termometro" width="200" height="300">
-<img src="/images/termometro.jpg" alt="termometro" width="200" height="300">
+  <img src="umidade.jpg" alt="umidade" width="200" height="300">
 <div class="header">
   <h2>Header</h2>
 </div>
