--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@ body {
 </head>
 <body>
 
-<h2>CSS Template using Float</h2>
+<h2>CSS Template using Float and CCS</h2>
 <p>Painel de controle para sensores e atuadores.</p>
 <p>Leitura de Temperatura, tensao e corrente.</p>
   <img src="umidade.jpg" alt="umidade" width="200" height="300">
 <div class="header">
   <h2>Header</h2>
+  "termometro.jpg"
 </div>
 
 <div class="row">
