--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@ body {
 </head>
 <body>
 
-<h2>CSS Template using Float and CCS</h2>
+<h2>Template usando CCS e HTML</h2>
 <p>Painel de controle para sensores e atuadores.</p>
 <p>Leitura de Temperatura, tensao e corrente.</p>
-  <img src="umidade.jpg" alt="umidade" width="200" height="300">
 <div class="header">
-  <h2>Header</h2>
-  "termometro.jpg"
+  <h2>Painel de controle</h2>
 </div>
 
 <div class="row">
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="/Users/Thales/workspace/thales/Thales/termometro.jpg" alt="termometro" width="200" height="300">
+  <img src="/termometro.jpg" alt="termometro" width="200" height="300">
   <input type="button" class="button" value="Ler Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
