--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 
 <div class="row">
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="/termometro.jpg" alt="termometro" width="200" height="300">
+  <img src="images/termometro.jpg" alt="termometro" width="50" height="30">
   <input type="button" class="button" value="Ler Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
