--- a/index.html
+++ b/index.html
@@ -66,23 +66,30 @@ body {
 </head>
 <body>
 
+<script>
+var temp = 30;
+var corrente = 'Curto Circuito';
+var tensao = 'Sobre Tensão';
+
+</script>
+
+
 <h2>Template usando CCS e HTML</h2>
 <p>Painel de controle para sensores e atuadores.</p>
 <p>Leitura de Temperatura, tensao e corrente.</p>
 <div class="header">
   <h2>Painel de controle</h2>
-</div>
+<p id="demo"></p>
 
-<div class="row">
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="images/termometro.jpg" alt="termometro" width="50" height="30">
-  <input type="button" class="button" value="Ler Temperatura">
+  <img src="images/termometro.jpg" alt="termometro" width="100" height="80">
+  <input type="button" onclick="alert(temp)"value="Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
-  <input type="button" class="button" value="Ler Corrente">
+  <input type="button" onclick="alert(corrente)"value="Corrente">
   </div>
   <div class="column" style="background-color:rgb(255, 165, 0);">
-  <input type="button" class="button" value="Ler Tensao">
+   <input type="button" onclick="alert(tensao)"value="Tensao">
   </div>
 </div>
 
