--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ var tensao = 'Sobre Tensão';
 <p id="demo"></p>
 
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="images/termometro.jpg" alt="termometro" width="100" height="80">
+  <img src="/images/termometro.jpg" alt="termometro" width="100" height="80">
   <input type="button" onclick="alert(temp)"value="Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
