--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var corrente = 'Curto Circuito';
 var tensao = 'Sobre Tensão';
 
 </script>
-<img src="termometro.jpg" alt="termometro">
+<img src="termometro.jpg" alt="termometro" width="10" height="10">
 
 <h2>Template usando CCS e HTML</h2>
 <p>Painel de controle para sensores e atuadores.</p>
