--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var corrente = 'Curto Circuito';
 var tensao = 'Sobre Tensão';
 
 </script>
-<img src="termometro.jpg" alt="termometro" width="10" height="10">
+
 
 <h2>Template usando CCS e HTML</h2>
 <p>Painel de controle para sensores e atuadores.</p>
@@ -83,7 +83,6 @@ var tensao = 'Sobre Tensão';
 
   <div class="column" style="background-color:rgb(255, 0, 10);">
   <img src="/images/termometro.jpg" alt="termometro" width="100" height="80">
-<img src="termometro.jpg" alt="termometro">
   <input type="button" onclick="alert(temp)"value="Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
@@ -100,7 +99,11 @@ var tensao = 'Sobre Tensão';
 
 
 
+<p id="demo"></p>
 
+<script>
+document.getElementById("demo").innerHTML = Date();
+</script>
 
 
 </body>
