--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ var tensao = 'Sobre Tensão';
 
 <div class="footer">
   <script>
+<p>Footer</p>
 document.getElementById("demo").innerHTML = Date();
 </script>
 
