--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 
 <script>
 var temp = 30;
-var corrente = 'Curto Circuito';
+var Lore = 'Pé rachado';
 var tensao = 'Sobre Tensão';
 
 </script>
