--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 
 <script>
 var temp = 30;
-var Lore = 'Pe rachado';
+var corrente = 'Curto Circuito';
 var tensao = 'Sobre Tensão';
 
 </script>
@@ -86,7 +86,7 @@ var tensao = 'Sobre Tensão';
   <input type="button" onclick="alert(temp)"value="Temperatura">
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
-  <input type="button" onclick="alert(Lore)"value="Lore">
+  <input type="button" onclick="alert(corrente)"value="Curto Circuito">
   </div>
   <div class="column" style="background-color:rgb(255, 165, 0);">
    <input type="button" onclick="alert(tensao)"value="Tensao">
