--- a/index.html
+++ b/index.html
@@ -54,13 +54,44 @@ body {
     background-color: #555555;
     border: none;
     color: white;
-    padding: 10px 12px;
+    padding: 8px 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
+    font-size: 8px;
     margin: 4px 2px;
     cursor: pointer;
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+}
+
+.container img {
+    width: 100%;
+    height: auto;
+}
+
+.container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #f1f1f1;
+    color: black;
+    font-size: 12px;
+    padding: 4px 1px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.container .btn:hover {
+    background-color: black;
+    color: white;
 }
 </style>
 </head>
@@ -82,8 +113,12 @@ var tensao = 'Sobre Tensão';
 <p id="demo"></p>
 
   <div class="column" style="background-color:rgb(255, 0, 10);">
-  <img src="/images/termometro.jpg" alt="termometro" width="300" height="280">
-  <input type="button" onclick="alert(temp)"value="Temperatura">
+  <div class="container">
+  <img src="img_lights.jpg" alt="Snow" style="width:100%">
+  <input type="btn" class="btn" onclick="alert(temp)"value="Temperatura">
+
+  </div>
+  
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
   <input type="button" onclick="alert(corrente)"value="Curto Circuito">
