--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var tensao = 'Sobre Tensão';
 
   <div class="column" style="background-color:rgb(255, 0, 10);">
   <div class="container">
-  <img src="img_lights.jpg" alt="Snow" style="width:100%">
+  <img src="/images/termometro.jpg" alt="termometro" width="300" height="280">
   <input type="btn" class="btn" onclick="alert(temp)"value="Temperatura">
 
   </div>
