--- a/index.html
+++ b/index.html
@@ -119,11 +119,13 @@ var tensao = 'Sobre Tensão';
   
   </div>
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
-  
-   <img src="/images/umidade.jpg" alt="umidade" width="50" height="40">
+    <div class="container">
+   <img src="/images/umidade.jpg" alt="umidade" width="150" height="120">
   <input type="btn" class="btn" onclick="alert(umidade)"value="Umidade">
+ </div>
   </div>
   <div class="column" style="background-color:rgb(255, 165, 0);">
+   <div class="container">
      <img src="/images/tensao.jpg" alt="tensao" width="50" height="40">
   <input type="btn" class="btn" onclick="alert(tensao)"value="tensao">
   </div>
