--- a/teste.html
+++ b/teste.html
@@ -73,15 +73,15 @@
 					});
 
 					var charData1 = [ {
-						x : x,
-						y : y,
+						x1 : x1,
+						y1 : y1,
 						mode : 'lines+markers',
 						line : {
 							color : '#80CAF6'
 						}
 					} ];
 
-					var chart1 = document.getElementById('chart');
+					var chart1 = document.getElementById('chart1');
 
 					Plotly.newPlot(chart1, charData1);
 				};
