--- a/teste.html
+++ b/teste.html
@@ -84,8 +84,8 @@
 			});
             
             var url1 = 'http://35.199.76.183:3000/humidade';
-	angular.module('iot1', []).controller(
-			'sensor1',
+	angular.module('iot', []).controller(
+			'sensor',
 			function($scope, $http) {
 				$scope.GetData = function() {
 					$http.get(url1).then(function(response1) {
