--- a/teste.html
+++ b/teste.html
@@ -87,10 +87,10 @@
 	angular.module('iot1', []).controller(
 			'sensor1',
 			function($scope, $http) {
-				$scope.GetData = function() {
+				$scope.GetData1 = function() {
 					$http.get(url1).then(function(response1) {
-						$scope.sensor = response.data;
-						$scope.Plot(response.data);
+						$scope.sensor1 = response.data1;
+						$scope.Plot1(response.data1);
 					});
 
 				};
@@ -102,23 +102,23 @@
 								+ ("00" + (d.getMonth() + 1)).slice(-2) + "-"
 								+ ("00" + (d.getDate())).slice(-2) + " "
 								+ d.toLocaleTimeString(),
-						valor1 : $scope.valor
+						valor1 : $scope.valor1
 					};
 
 					$http.post(url1, data1).then(function(response1) {
-						$scope.showSuccess = true;
-						$scope.GetData();
+						$scope.showSuccess1 = true;
+						$scope.GetData1();
 					}, function(response1) {
-						$scope.showError = true;
+						$scope.showError1 = true;
 					});
 				};
 
 				$scope.Plot = function(data1) {
 					var x1 = [], y1 = [];
 
-					data.forEach(function(item) {
-						x.push(item.time);
-						y.push(item.valor);
+					data.forEach(function(item1) {
+						x.push(item.time1);
+						y.push(item.valor1);
 					});
 
 					var charData1 = [ {
@@ -145,7 +145,7 @@
   
 </head>
 
-<body ng-app="iot" ng-controller="sensor" ng-init="GetData()">
+<body ng-app="iot" ng-controller="sensor" ng-init="GetData()" ng-app="iot1" ng-controller="sensor1" ng-init="GetData1()">
 
 
 	<div class="container">
@@ -203,13 +203,13 @@
 						class="form-control" name="valor1" ng-model="valor1"
 						placeholder="informe o valor" required />
 				</div>
-				<button type="button" class="btn btn-primary" ng-click="SendData()">Enviar</button>
+				<button type="button" class="btn btn-primary" ng-click="SendData1()">Enviar</button>
 				<p></p>
-				<div data-ng-show="showSuccess" class="alert alert-success">
+				<div data-ng-show="showSuccess1" class="alert alert-success">
 					<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Enviado
 						com Sucesso!</strong>
 				</div>
-				<div data-ng-show="showError" class="alert alert-danger">
+				<div data-ng-show="showError1" class="alert alert-danger">
 					<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Erro
 						ao Enviar!</strong>
 				</div>
@@ -217,16 +217,16 @@
 				<table class="table table-striped">
 					<thead class="thead-dark">
 						<tr>
-							<th>id</th>
-							<th>time</th>
-							<th>valor</th>
+							<th>id1</th>
+							<th>time1</th>
+							<th>valor1</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="s in sensor">
-							<td>{{s.id}}</td>
-							<td>{{s.time}}</td>
-							<td>{{s.valor}}</td>
+							<td>{{s.id1}}</td>
+							<td>{{s.time1}}</td>
+							<td>{{s.valor1}}</td>
 						</tr>
 					</tbody>
 				</table>
