--- a/teste.html
+++ b/teste.html
@@ -83,7 +83,7 @@
 
 			});
             
-            var url1 = 'http://35.199.76.183:3000/humidade';
+            var url1 = 'http://35.199.76.183:3000/umidade';
 	angular.module('iot1', []).controller(
 			'sensor1',
 			function($scope, $http) {
@@ -95,7 +95,7 @@
 
 				};
 
-				$scope.SendData = function() {
+				$scope.SendData1 = function() {
 					var d1 = new Date();
 					var data1 = {
 						time : d.getFullYear() + "-"
