--- a/teste.html
+++ b/teste.html
@@ -145,8 +145,8 @@
   
 </head>
 
-<body ng-app="iot" ng-controller="sensor" ng-init="GetData()" ng-app="iot1" ng-controller="sensor1" ng-init="GetData1()">
-
+<body ng-app="iot" ng-controller="sensor" ng-init="GetData()">
+<body ng-app="iot1" ng-controller="sensor1" ng-init="GetData1()">
 
 	<div class="container">
 		<h2 align=center>
@@ -194,6 +194,7 @@
 			<div class="col-sm-4">
             		 <div id="chart" class="responsive-plot"></div>
                      <div id="chart1" class="responsive-plot"></div>
+                     	 <div id="chart" class="responsive-plot"></div>
             </div>
             	
             <div class="col-sm-4">
