--- a/teste.html
+++ b/teste.html
@@ -193,6 +193,7 @@
 			</div>
 			<div class="col-sm-4">
             		 <div id="chart" class="responsive-plot"></div>
+                     <br>Exemplo Bootstrap - AngularJs - Rest - Plotly
                      <div id="chart1" class="responsive-plot"></div>
             </div>
             	
