--- a/teste.html
+++ b/teste.html
@@ -201,13 +201,13 @@
   </script>
   
    <script>
-  var data = [{
+  var CharData = [{
   x: [x],
   y: [y],
   type: 'bar'
 }];
 
-Plotly.newPlot('myDiv', data);
+Plotly.newPlot('myDiv', CharData);
 </script>
                      
                      
