--- a/teste.html
+++ b/teste.html
@@ -201,9 +201,10 @@
   </script>
   
    <script>
+   
   var CharData = [{
-  x: [x],
-  y: [y],
+  x: ['banana', 'pera', 'uva'],
+  y: [3,4,5,6],
   type: 'bar'
 }];
 
