--- a/dia14.html
+++ b/dia14.html
@@ -69,7 +69,7 @@
 
 					data.forEach(function(item) {
 						x.push(item.time);
-						y.push(item.valor);
+						y.push(item.temp);
 					});
 
 					var charData = [ {
