--- a/dia16.html
+++ b/dia16.html
@@ -9,6 +9,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<script src ="libraries/p5.js" type="text/javascript"> </script>
+<script src ="libraries/p5.dom.js" type="text/javascript"> </script>
+<script src ="libraries/p5.sound.js" type="text/javascript"> </script>
+
+<script src ="sketch.js" type="text/javascript"> </script>
+
 <!-- AnglularJs -->
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
@@ -91,7 +97,7 @@
 
 <script>
 var weather;
-var url1 = api+city+apiKey+units;
+
 var api='http://api.openweathermap.org/data/2.5/weather?q=';
 
 var apiKey=' &APPID=9e2818e4d3e02fd2c519fa8019721fb1';
@@ -104,13 +110,13 @@ var input;
    	input = select('#city');
     }
     
-    function weatherask(){
+    function weatherAsk(){
      var url1 = api+input.value() + apiKey+units;
     loadJSON(url1, gotData);
     
     }
-    function gotData(data){
-    weather=data;
+    function gotData(data1){
+    weather=data1;
     }
     function draw(){
    
