--- a/aula2.html
+++ b/aula2.html
@@ -130,17 +130,12 @@ body {
 						$scope.sensor = response.data;
 						$scope.Plot(response.data);
 					});
-
-				};
+					var data = {temp:$scope.weather.main.temp}
+                   				};
 
 				$scope.SendData = function() {
 					var d = new Date();
-					var data = {
-						time : d.getFullYear() + "-"
-								+ ("00" + (d.getMonth() + 1)).slice(-2) + "-"
-								+ ("00" + (d.getDate())).slice(-2) + " "
-								+ d.toLocaleTimeString(),
-						temp : $scope.weather.main.temp
+										
 					};
 
 					$http.post(url, data).then(function(response) {
@@ -172,7 +167,7 @@ body {
 <body ng-app="iot" ng-controller="sensor" ng-init="GetData()">
 
 <script>
-var temperatura=temp;
+
 var umidade = 'Umidade';
 var tensao = 'Sobre Tensao';
 </script>
@@ -188,7 +183,7 @@ var tensao = 'Sobre Tensao';
   <div class="column" style="background-color:rgb(255, 0, 10);">
   <div class="container">
   <img src="/images/termometro.jpg" alt="termometro" width="50" height="40">
-  <input type="btn" class="btn" onclick="alert(temperatura)"value="Temperatura">
+  <input type="btn" class="btn" onclick="alert(temp)"value="Temperatura">
   </div>
   
   </div>
