--- a/aula2.html
+++ b/aula2.html
@@ -187,6 +187,25 @@ var tensao = 'Sobre Tensao';
   </div>
   
   </div>
+  <div class="form-group">
+					<label for="temp">Valor:</label> <input type="number"
+						class="form-control" name="temp" ng-model="temp"
+						placeholder="informe o valor" required />
+				</div>
+				<button type="button" class="btn btn-primary" ng-click="SendData()">Enviar</button>
+				<p></p>
+				<div data-ng-show="showSuccess" class="alert alert-success">
+					<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Enviado
+						com Sucesso!</strong>
+				</div>
+				<div data-ng-show="showError" class="alert alert-danger">
+					<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Erro
+						ao Enviar!</strong>
+				</div>
+				<p></p>
+				
+			</div>
+  
   <div class="column" style="background-color:rgb(0 , 50, 200)	;">
     <div class="container">
    <img src="/images/umidade.jpg" alt="umidade" width="150" height="120">
