--- a/map.html
+++ b/map.html
@@ -54,7 +54,8 @@
 								+ ("00" + (d.getMonth() + 1)).slice(-2) + "-"
 								+ ("00" + (d.getDate())).slice(-2) + " "
 								+ d.toLocaleTimeString(),
-						temp : $scope.weather.main.temp
+						temp : $scope.weather.main.temp,
+                        humidity : $scope.weather.main.humidity
 					};
 
 					$http.post(url, data).then(function(response) {
@@ -69,7 +70,7 @@
 					var x = [], y = [];
 
 					data.forEach(function(item) {
-						x.push(item.time);
+						x.push(item.humidity);
 						y.push(item.temp);
 					});
 
@@ -123,6 +124,7 @@
 							<th>id</th>
 							<th>time</th>
 							<th>temp</th>
+                            <th>humidity</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -137,8 +139,14 @@
 			<div class="col-sm-8">
 				<div id="chart" class="responsive-plot"></div>
  				<input type="button" class="btn" onclick="alert(temp)"value="Temp">
-<input type="button" class="btn" onclick="alert(temperatura)"value="Temperatura">
-<input type="button" class="btn" onclick="alert(temperatura1)"value="Temperatura1">
+<input type="button" class="btn" onclick="alert(#temperatura)"value="Temperatura">
+<input type="button" class="btn" onclick="alert(weather.main.temp)"value="Temperatura1">
+
+<div class="form-group">
+					<label for="humidity">Valor:</label> <input type="number"
+						class="form-control" name="humidity" ng-model="humidity"
+						placeholder="informe o valor" required />
+				</div>
 			</div>
 		</div>
 	</div>
