--- a/map.html
+++ b/map.html
@@ -132,6 +132,7 @@
 							<td>{{s._id}}</td>
 							<td>{{s.time}}</td>
 							<td>{{s.temp}}</td>
+                            	<td>{{s.humidity}}</td>
 						</tr>
 					</tbody>
 				</table>
