--- a/aula2v5.html
+++ b/aula2v5.html
@@ -85,7 +85,7 @@
 				<th>Humidade</th>
 				<th>UF</th>
 			</tr>
-			<!-- busca as informações em scope.cidades -->
+			<!-- buscar as informações em scope.cidades -->
 
 			<!-- também pode filtrar os dados por ordem e limita apenas 10 cidades(apenas oculta)-->
 			<tr ng-class="{'selecionado': inf.selecionado}" ng-repeat="inf in cidades | filter:busca | orderBy:criterioDeOrde:direcaoDaOrd | limitTo:10">
