--- a/aula3v4.html
+++ b/aula3v4.html
@@ -1,6 +1,7 @@
 <!-- Pós Graduação Internet das Coisas - CEFET-MG
 	Disciplina: Programação para Sistemas de Computação
 	Thales Ribeiro Zangirolami
+	Michel Silva Maldonado
  -->
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -33,7 +34,7 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 <script>
-	var url = 'http://35.199.76.183:3000/temperatura';
+	var url = 'http://35.199.97.143:3000/temperatura';
 	angular.module('iot', []).controller(
 			'sensor',
 			function($scope, $http) {
